--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": false,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "build": "NEXT_TELEMETRY_DISABLED=1 next build",
+    "start": "NEXT_TELEMETRY_DISABLED=1next start",
     "lint": "next lint"
   },
   "dependencies": {
